--- a/hello-world/app/src/main/res/values/strings.xml
+++ b/hello-world/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Hello World</string>
     <string name="hello_world_message">Hello World!</string>
-    <string name="send_message">Send message</string>
+    <string name="send_message">Mandami sto fucking message</string>
     <string name="change_text">Change text</string>
 </resources>
