--- a/hello-world/app/src/main/res/values-it-rIT/strings.xml
+++ b/hello-world/app/src/main/res/values-it-rIT/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="hello_world_message">Ciao Mondo!</string>
     <string name="send_message">Invia messaggio</string>
-    <string name="cose">cose ita</string>
+    <string name="cose">peppino ita</string>
     <string name="change_text">Cambia testo</string>
 </resources>
