--- a/PinSpot/app/src/main/res/values/strings.xml
+++ b/PinSpot/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PinSpot</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_password">Password is not valid</string>
     <string name="error_user_collision_message">There is no user record corresponding to this identifier</string>
@@ -14,7 +14,7 @@
     <string name="title">Title</string>
     <string name="spot_it">Spot it</string>
     <string name="remove_the_pin_the_favorite_list">Remove the pin the favorite list</string>
-    <string name="login_to_unblock_feature">Please login to unblock this feature</string>
+    <string name="login_to_unlock_feature">Please login to unlock this feature</string>
     <string name="login">Login</string>
     <string name="e_mail_address">Email address</string>
     <string name="password">Password</string>
@@ -30,11 +30,14 @@
     <string name="mail_example_com">mail@example.com</string>
     <string name="temperature_setting">Temperature: F°</string>
     <string name="celsius">C°</string>
-    <string name="research_radius">Research\'s radius: 50 km</string>
     <string name="logout">Logout</string>
     <string name="register_now">Register Now</string>
     <string name="have_an_account_log_in">Have an account? Log in</string>
     <string name="app_settings">App settings</string>
     <string name="forgot_password_title">Password recovery</string>
     <string name="recover_password_now">Recover password</string>
+    <string name="add_or_remove_pin_from_favorite_list">Add or remove pin from favorite list</string>
+    <string name="pinspot_version">PinSpot v1.0</string>
+    <string name="go_back">Go back</string>
+    <string name="cancel_operation">cancel</string>
 </resources>
